# logicalnode

./: .gitignore  CAPACITOR_SETUP_SUMMARY.md  QUICKSTART.md  README.md  README_TAURI.md  README_iOS.md  capacitor.config.json  generate-ico.js  generate-icon.js  index.html  logicalnode_v2.py  main.js  package-lock.json  package.json  renderer.js  styles.css  test-electron-min.js
assets/icons/: icon.png.html
capacitor/: package.json
capacitor/www/: capacitor.js  index.html
docs/: default-behaviors-checklist.md
electron/: README.md  apply-win-icon.js  index.html  main.js  package.json  playwright.config.js  renderer.js  styles.css  test.js
electron/assets/icons/: icon.icns
electron/e2e/: 01-launch.spec.js  02-node-crud.spec.js  03-hierarchy.spec.js  04-undo-redo.spec.js  05-styling.spec.js  06-collapse-expand.spec.js  07-search.spec.js  08-file-io.spec.js  09-export.spec.js  10-sticky-notes.spec.js  11-clipboard.spec.js  12-memo.spec.js  13-drag-drop.spec.js  14-integration.spec.js  helpers.js
ios/App/: Podfile
ios/App/App.xcodeproj/: project.pbxproj
quasar/: README.md  README_QUASAR.md  package.json  quasar.config.js
quasar/src-electron/: electron-main.js  electron-preload.js
quasar/src/components/: TreeNode.vue
quasar/src/composables/: useTreeLogic.js
src-tauri/: Cargo.toml
tauri/: TAURI_SETUP_COMPLETE.md  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tauri/www/: index.html  renderer-clean.js  renderer.js  tauri-adapter.js  test.html
www/: index.html  renderer.js  styles.css
(+2 files in other folders)
